# regulus

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/notes/: mypy-baseline.md
docs/superpowers/plans/: 2026-06-30-regulus-fork.md
docs/superpowers/specs/: 2026-06-30-regulus-fork-design.md
regulus/: __init__.py
regulus/collections/: array.py  asyncseq.py  block.py  map.py  maptree.py  seq.py
regulus/core/: aiotools.py  compose.py  error.py  mailbox.py  misc.py  option.py  pipe.py  result.py
regulus/effect/: async_option.py  async_result.py  option.py  result.py  seq.py
regulus/extra/: parser.py
regulus/extra/option/: pipeline.py
regulus/extra/result/: catch.py  pipeline.py  traversable.py
tests/: test_array.py  test_async_option_builder.py  test_async_result_builder.py  test_asyncseq.py  test_block.py  test_cancellation.py  test_catch.py  test_compose.py  test_curried.py  test_disposable.py  test_fn.py  test_mailbox.py  test_map.py  test_option.py  test_option_builder.py  test_parser.py  test_pipe.py  test_result.py  test_result_builder.py  test_seq.py  test_seq_builder.py  test_tagged_union.py  test_try.py  test_typing.py
